Pedidos agrupados por fecha, edicion de pedidos,cambios en swagger.yml
